@@ -100,55 +100,55 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
     }
     @Override
     public Result sign() {
-        // 1.获取当前登录用户
+        // 获取当前登录用户ID
         Long userId = UserHolder.getUser().getId();
-        // 2.获取日期
+        // 获取当前日期
         LocalDateTime now = LocalDateTime.now();
-        // 3.拼接key
-        String keySuffix = now.format(DateTimeFormatter.ofPattern(":yyyyMM"));
-        String key = USER_SIGN_KEY + userId + keySuffix;
-        // 4.获取今天是本月的第几天
-        int dayOfMonth = now.getDayOfMonth();
-        // 5.写入Redis SETBIT key offset 1
-        stringRedisTemplate.opsForValue().setBit(key, dayOfMonth - 1, true);
+        // 拼接Redis Key
+        String key = String.format("%s%d:%s", USER_SIGN_KEY, userId, now.format(DateTimeFormatter.ofPattern("yyyyMM")));
+        // 获取今天是本月的第几天
+        int dayOfMonth = now.getDayOfMonth() - 1; // Redis的位图操作下标从0开始
+        // 写入Redis位图
+        stringRedisTemplate.opsForValue().setBit(key, dayOfMonth, true);
+
         return Result.ok();
     }
 
     @Override
     public Result signCount() {
-        // 1.获取当前登录用户
+        // 获取当前登录用户ID
         Long userId = UserHolder.getUser().getId();
-        // 2.获取日期
+        // 获取当前日期
         LocalDateTime now = LocalDateTime.now();
-        // 3.拼接key
-        String keySuffix = now.format(DateTimeFormatter.ofPattern(":yyyyMM"));
-        String key = USER_SIGN_KEY + userId + keySuffix;
-        // 4.获取今天是本月的第几天
+        // 拼接Redis Key
+        String key = String.format("%s%d:%s", USER_SIGN_KEY, userId, now.format(DateTimeFormatter.ofPattern("yyyyMM")));
+        // 获取今天是本月的第几天
         int dayOfMonth = now.getDayOfMonth();
-        // 5.获取本月截止今天为止的所有的签到记录，返回的是一个十进制的数字 BITFIELD sign:5:202203 GET u14 0
+        // 获取本月截至今天为止的所有签到记录
         List<Long> result = stringRedisTemplate.opsForValue().bitField(
                 key,
                 BitFieldSubCommands.create()
                         .get(BitFieldSubCommands.BitFieldType.unsigned(dayOfMonth)).valueAt(0)
         );
-        if (result == null || result.isEmpty()) {
-            // 没有任何签到结果
+
+        // 如果没有任何签到记录，返回0
+        if (result == null || result.isEmpty() || result.get(0) == null) {
             return Result.ok(0);
         }
-        Long num = result.getFirst();
-        if (num == null || num == 0) {
-            return Result.ok(0);
-        }
-        // 6.循环遍历
+
+        // 获取记录的二进制数
+        long num = result.get(0);
         int count = 0;
-        // 如果为0，说明未签到，结束
-        // 如果不为0，说明已签到，计数器+1
-        while ((num & 1) != 0) {
-            // 6.1.让这个数字与1做与运算，得到数字的最后一个bit位  // 判断这个bit位是否为0
+
+        // 统计连续签到的天数
+        while (num != 0) {
+            if ((num & 1) == 0) {
+                break;
+            }
             count++;
-            // 把数字右移一位，抛弃最后一个bit位，继续下一个bit位
             num >>>= 1;
         }
+
         return Result.ok(count);
     }
 
